--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>IFSC 1310 | Raymond Armon</title>
-  <meta name="description" content="Keyword Rich Description" />
-  <meta name="author" content="Raymond Armon" />
-
+  <title>IFSC 3342 | Raymond Armon</title>
+  <meta content="Keyword Rich Description" name="description">
+  <meta content="Raymond Armon" name="author">
 </head>
 
 <body>
-  <h1>Raymond Armon</h1>
-</body>
-</html>
+  <h1> Raymond Armon</h1>
+  <nav>
+    <ul>
+      <li><a href="/ifsc-3342/pre-assessment/index.html">Pre Assessment</a></li>
+    </ul>
+  </nav>
+  </body>
+  </html>
+  
