--- a/mobile web project/impact.html
+++ b/mobile web project/impact.html
@@ -22,18 +22,11 @@
         <a class="nav-link" href="index.html">Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Impact</a>
+        <a class="nav-link" href="lifestyle.html">Lifestyle</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/projects/mobile web project/lifestyle.html">Lifestyle</a>
+        <a class="nav-link" href="hero.html">Hero</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Movies</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
         </div>
       </li>
     </ul>
@@ -46,7 +39,7 @@
     <div class="jumbotron">
       <div class="container">
   <h2 class="display-3">How did Chadwick Boesman career played in the community??</h2>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">
   <p>  Boseman played many influential Black figures throughout his career. One of them was Jackie Robinson in the 2013 film “42.”
   <p>Robinson was the first African American to play in Major League Baseball. Robinson broke the color barrier and ended racial segregation in professional sports, but his activism did not stop there. He protested for civil rights during the 1960s, advocated for social justice and racial integration and brought awareness to issues such as redlining. </p>
   <p>Boseman reintroduced younger generations to Robinson through his role in the film. It is important for Black youth and the Black community entirely to be educated on individuals who look like them that helped paved the way for them to be where they are now. Robinson was the role model for athletes to use their platform to bring awareness to social justice, just like we are seeing now in the NBA bubble, NFL and other leagues as conversations on racial justice continue to become prominent. Boseman’s talent and dedication to the role helped the Black community embrace our Black heroes.
