--- a/mobile web project/index.html
+++ b/mobile web project/index.html
@@ -12,7 +12,6 @@
   <title>Raymond Armon-Remembering to Black Panther | Black Panther</title>
 </head>
 
-<body>
   <body>
   <div class="wrapper">
     <div class="text-overlay">
@@ -20,11 +19,11 @@
       <h3 id="logo">CB</h3>
       <nav id="nav-menu" class="nav-menu">
         <a href="#" class="nav-link">Home</a>
-        <a href="lifestyle.html" class="nav-link">Lifestyle</a> 
+        <a href="lifestyle.html" class="nav-link">Lifestyle-Acting</a> 
         <a href="impact.html" class="nav-link">Impact</a>
         <a href="hero.html" class="nav-link">A Hero</a>
-
       </nav>
+      
       <i class="fa fa-search fa-sm" role="button"></i>
       <i class="fa fa-bars fa-lg" onclick="toggleMenu()" role="button"></i>
        
@@ -53,6 +52,10 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script src="https://www.google-analytics.com/analytics.js" async="" defer=""></script>
 </body>
 </html>
+
+
